# xai-sdk-python

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CONTRIBUTING.md  PROPOSAL_O2_STRUCTURAL_PROMOTION.md  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag.yaml  ci.yaml  release.yaml  validate-version-bump.yaml
agent/: COMPANY_PROBLEM_CANVAS.md  EXECUTION_BOARD.md
examples/aio/: auth.py  batch_request.py  chat.py  collection.py  collections_multimodal.py  collections_tool.py  compaction.py  deferred_chat.py  files.py  files_chat.py  function_calling.py  home_assistant_integration.py  image_generation.py  image_generation_tool.py  image_multi_reference_editing.py  image_understanding.py  inline_files_chat.py  models.py  reasoning.py  search.py  server_side_tools.py  stored_chat.py  structured_outputs.py  telemetry.py  tokenizer.py  video_extension.py  video_generation.py
examples/sync/: auth.py  batch_request.py  chat.py  collection.py  collections_multimodal.py  collections_tool.py  compaction.py  deferred_chat.py  files.py  files_chat.py  function_calling.py  home_assistant_integration.py  image_generation.py  image_generation_tool.py  image_multi_reference_editing.py  image_understanding.py  inline_files_chat.py  models.py  reasoning.py  search.py  server_side_tools.py  stored_chat.py  structured_outputs.py  telemetry.py  tokenizer.py  video_extension.py  video_generation.py
src/xai_sdk/: __about__.py  auth.py  batch.py  chat.py  client.py  collections.py  cost.py  documents.py  files.py  image.py  multimodal_collections.py  poll_timer.py  retry.py  safety.py  search.py  service_tier.py  tools.py  tools_examples.py  video.py
src/xai_sdk/agentic/: __init__.py  contracts.py  criticality.py  loop.py  trajectory.py
src/xai_sdk/aio/: __init__.py  auth.py  batch.py  chat.py  client.py  collections.py  documents.py  files.py  image.py  models.py  tokenizer.py  video.py
src/xai_sdk/proto/: __init__.py  auth_pb2.py  chat_pb2.py  chat_pb2_grpc.py  deferred_pb2.py  embed_pb2.py  image_pb2.py  models_pb2.py  models_pb2_grpc.py  sample_pb2.py  tokenize_pb2.py  tokenize_pb2_grpc.py  usage_pb2.py
src/xai_sdk/proto/v5/: batch_pb2.py  batch_pb2.pyi  batch_pb2_grpc.py  chat_pb2.py  chat_pb2.pyi  collections_pb2.py  collections_pb2.pyi  collections_pb2_grpc.py  deferred_pb2.py  deferred_pb2.pyi  documents_pb2.py  documents_pb2.pyi  files_pb2.py  files_pb2.pyi  files_pb2_grpc.py  image_pb2.py  image_pb2.pyi  types_pb2.py  types_pb2.pyi  usage_pb2.py  usage_pb2.pyi  video_pb2.py  video_pb2.pyi
src/xai_sdk/proto/v6/: batch_pb2.py  batch_pb2.pyi  batch_pb2_grpc.py  chat_pb2.py  chat_pb2.pyi  chat_pb2_grpc.py  collections_pb2.py  collections_pb2.pyi  deferred_pb2.py  documents_pb2.py  documents_pb2.pyi  files_pb2.py  files_pb2.pyi  image_pb2.py  image_pb2.pyi  types_pb2.py  types_pb2.pyi  usage_pb2.py  usage_pb2.pyi  video_pb2.py  video_pb2.pyi  video_pb2_grpc.py
src/xai_sdk/sync/: __init__.py  auth.py  batch.py  chat.py  client.py  collections.py  documents.py  files.py  image.py  models.py  tokenizer.py  video.py
src/xai_sdk/telemetry/: __init__.py  config.py
src/xai_sdk/types/: __init__.py  chat.py  common.py  image.py  model.py
tests/: chat_test.py  conftest.py  file_content_test.py  improvements_test.py  multimodal_collections_test.py  safety_test.py  server.py  telemetry_test.py  test_runner_canary.py  tools_test.py
tests/aio/: auth_test.py  batch_test.py  chat_test.py  client_test.py  collections_test.py  documents_test.py  files_test.py  image_test.py  models_test.py  multimodal_collections_test.py  tokenize_test.py  video_rest_test.py  video_test.py
tests/benchmarks/: auth_benchmark.py
tests/sync/: auth_test.py  authtest.py  batch_test.py  chat_test.py  client_test.py  collections_test.py  documents_test.py  files_test.py  image_test.py  models_test.py  multimodal_collections_test.py  tokenize_test.py  video_rest_test.py  video_test.py
tools/xai_sdk_receipts/: pyproject.toml
tools/xai_sdk_receipts/tests/: test_receipt.py  test_status.py
tools/xai_sdk_receipts/xai_sdk_receipts/: __init__.py  __main__.py  dashboard.py  doctor.py  indexing.py  probe.py  receipt.py  redact.py
